--- a/views/unsplash/index.jade
+++ b/views/unsplash/index.jade
@@ -5,7 +5,7 @@ block head
 
 block neck
   //- Common
-  link(href='#{cdnServer}/vendor/fullPage/jquery.fullPage.css', rel='stylesheet')
+  link(href='#{cdnServer}/vendor/fullpage/jquery.fullPage.css', rel='stylesheet')
 
   //- App
   link(href='#{cdnServer}/views/unsplash/examples.css', rel='stylesheet')
