--- a/views/unsplash/index.jade
+++ b/views/unsplash/index.jade
@@ -14,7 +14,7 @@ block feet
   //- Common
   script(src='#{cdnServer}/vendor/jquery/dist/jquery.min.js')
   script(src='#{cdnServer}/vendor/jqueryui/jquery-ui.min.js')
-  script(src='#{cdnServer}/vendor/fullPage/jquery.fullPage.min.js')
+  script(src='#{cdnServer}/vendor/fullpage/jquery.fullPage.min.js')
   script(src='#{cdnServer}/vendor/screenfull/dist/screenfull.min.js')
 
   //- App
