--- a/views/unsplash/layout/css.jade
+++ b/views/unsplash/layout/css.jade
@@ -1,2 +1,5 @@
 //- H5BP Responsive
 link(href='#{cdnServer}/views/unsplash/initializr/css/normalize.css', rel='stylesheet')
+
+//- Global
+link(href='#{cdnServer}/vendor/fontawesome/css/font-awesome.min.css?20141113', rel='stylesheet')
